--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=SpringStudent
 spring.datasource.password=SpringStudent
+
+spring.data.rest.base-path=api/
