changing default url and page size

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.username=SpringStudent
 spring.datasource.password=SpringStudent
 
 spring.data.rest.base-path=api/
+spring.data.rest.default-page-size=20
