--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,16 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
-		<!--Adding spring rest -->
+		<!--Adding spring security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!--Adding spring rest 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
