--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
 spring.datasource.username=SpringStudent
 spring.datasource.password=SpringStudent
 
-spring.data.rest.base-path=api/
-spring.data.rest.default-page-size=20
+#spring.data.rest.base-path=api/
+#spring.data.rest.default-page-size=20
+
+spring.security.user.name=Scottish
+spring.security.user.password=Accent
